--- a/coollists.ipynb
+++ b/coollists.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "coollists",
       "provenance": [],
-      "authorship_tag": "ABX9TyMLkmc1fOlEQMCMXl5Ye+W0"
+      "authorship_tag": "ABX9TyMLkmc1fOlEQMCMXl5Ye+W0",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -13,6 +14,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/gist/mohadesehrezaei2020/4c78a5788e1cf966d986364ad8d2647c/coollists.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "metadata": {
